--- a/style.css
+++ b/style.css
@@ -26,23 +26,40 @@
 
 /*-------------GLOBAL------------*/
 
-* {
-    margin: 0;
-    padding: 0;
-    /* box-sizing: border-box; */
-    font-family: monospace;
-    color: var(--light-text);
-    border-radius: 4px;
-    text-decoration: none;
-}
 
 body {
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
 }
 
+@font-face {
+    font-family: sunbather;
+    src: url('fonts/HenriDidot.otf');
+}
+
+@font-face {
+    font-family: futida;
+    src: url('fonts/Futida.otf');
+}
+
+@font-face {
+    font-family: caslon-regular;
+    src: url('fonts/ACaslonPro-Regular.otf');
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    /* box-sizing: border-box; */
+    font-family: caslon-regular;
+    color: var(--light-text);
+    border-radius: 4px;
+    text-decoration: none;
+}
+
+
 /* span {
-    font-size: 2rem;
+    font-size: 1.17rem;
 } */
 
 /*-------------CONTAINER------------*/
@@ -53,11 +70,7 @@ body {
     grid-template-rows: 2fr 4fr 2fr;
     gap: 2ch;
     height: 100vh;
-    /* max-width: 60%; */
 }
-
-
-
 
 /*-------------HEADER------------*/
 
@@ -80,20 +93,18 @@ header {
         color: var(--dark-text-1);
         /* position: fixed;
         bottom: 0; */
+        
     }
 
+    /* .header .about-me {
+        display: grid;
+    } */
 
     header .bio{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+        display: grid;
+        gap: 0.5rem;
+        max-width: 15rem;
     }
-
-        .bio .about-me {
-            max-width: 15rem;
-            display: grid;
-            gap: 0.5rem;
-        }
 
 /*-------------MAIN------------*/
 
@@ -115,17 +126,36 @@ main {
         }
 
             main .card {
-                border-left: thin solid var(--bright-text-dim);
-                border-top: thin solid var(--bright-text-dim);
-                padding: 1rem;
+                /* border-left: thin solid var(--bright-text-dim);
+                border-top: thin solid var(--bright-text-dim); */
                 box-shadow: 1px 1px 2px var(--bright-text-dim);
+                padding: 1rem;
                 display: grid;
                 gap: 0.5rem;
+                transition: transform 0.5s, background-color 0.5s;
+            }
+
+            main .card:hover {
+                transform: scale(1.02);
+                background-color: var(--dark-background-1);
             }
 
                 .card img {
                     width: 100%;
                 }
+
+                .card .project-heading {
+                    display: flex;
+                    justify-content: space-between;
+                    /* padding-right: 0.5rem; */
+                }
+
+                    .project-links {
+                        display: grid;
+                        grid-auto-flow: column;
+                        gap: 1rem;
+                        font-size: 1.17rem;
+                    }
 
 /*-------------FOOTER------------*/
 footer {
@@ -143,6 +173,10 @@ footer {
         gap: 1rem;
     }
 
+        .contact-me .phone-no, .contact-me .email{
+            font-family: futida;
+        }
+
     footer .headshot-f {
         background-image: url('images/headshot-lavender.jpg');
         background-size: contain;
@@ -150,4 +184,17 @@ footer {
         padding: 1rem;
         /* border: thick dotted darkviolet; */
         width: 10rem;
+    }
+
+    @media (max-width: 500px) {
+        body {
+            display: grid;
+            grid-template-columns: 1fr;
+        }
+
+        main .card-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(80vw, 1fr));
+            gap: 2rem;
+        }
     }
