simplified colors & arrangement, added sidebar

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     --dark-background-1: #0d1117;
     --dark-background-2: #0e1724;
     --dark-background-2-tl: #0e1724df;
+    --dark-background-3:#161b22;
     --dark-fill: #2f3045;
     --dark-heading: #1b2e49f8;
     --light-text: #c9d1d9;
@@ -30,6 +31,7 @@
 body {
     display: grid;
     grid-template-columns: 1fr 4fr 1fr;
+    gap: 1rem;
 }
 
 @font-face {
@@ -58,65 +60,47 @@ body {
 }
 
 
-/* span {
+span {
     font-size: 1.17rem;
-} */
+    transition: color 0.5s;
+}
 
+span:hover {
+    color: var(--element-background-2);
+}
 /*-------------CONTAINER------------*/
 
 .container {
     grid-column: 2/3;
     display:grid;
     grid-template-rows: 2fr 4fr 2fr;
-    gap: 2ch;
+    gap: 1rem;
     height: 100vh;
 }
 
 /*-------------HEADER------------*/
 
 header {
-    background-color: var(--dim-background);
+    background-color: var(--dark-background-3);
     padding: 2rem;
-    display: flex;
-    justify-content: space-between;
 }
 
-    header .headshot-h {
-        background-image: url('images/headshot-lavender.jpg');
-        background-size: contain;
-        background-repeat: no-repeat;
-        padding: 1rem;
-        /* border: thick dotted darkviolet; */
+    header > h1 {
+        text-align: center  ;
     }
-
-    header h1 {
-        color: var(--dark-text-1);
-        /* position: fixed;
-        bottom: 0; */
-        
-    }
-
-    /* .header .about-me {
-        display: grid;
-    } */
-
-    header .bio{
-        display: grid;
-        gap: 0.5rem;
-        max-width: 15rem;
-    }
+    
 
 /*-------------MAIN------------*/
 
 main {
-    background-color: var(--dark-background-2);
+    background-color: var(--dark-background-3);
     padding: 2rem;
     display: grid;
     gap: 1rem;
 }
 
         main h2 {
-            margin-left: 1rem;
+            text-align: center;
         }
 
         main .card-container {
@@ -140,14 +124,18 @@ main {
                 background-color: var(--dark-background-1);
             }
 
+            
+
                 .card img {
                     width: 100%;
+                    -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+                    filter: grayscale(100%);
                 }
 
                 .card .project-heading {
                     display: flex;
                     justify-content: space-between;
-                    /* padding-right: 0.5rem; */
+                    padding: 0.5rem;
                 }
 
                     .project-links {
@@ -159,10 +147,10 @@ main {
 
 /*-------------FOOTER------------*/
 footer {
-    background-color: var(--bright-text-dim);
+    background-color: var(--dark-background-3);
     padding: 2rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
     footer .contact-me {
@@ -171,20 +159,38 @@ footer {
         justify-content: space-around; */
         display: grid;
         gap: 1rem;
+        place-items: center;
     }
 
         .contact-me .phone-no, .contact-me .email{
             font-family: futida;
         }
 
-    footer .headshot-f {
-        background-image: url('images/headshot-lavender.jpg');
-        background-size: contain;
-        background-repeat: no-repeat;
-        padding: 1rem;
-        /* border: thick dotted darkviolet; */
-        width: 10rem;
-    }
+
+    footer .work-links {
+        display: grid;
+        grid-auto-flow: column;
+        gap: 1rem;
+    }    
+    
+
+/*-------------ASIDE-------------*/
+
+.headshot-h {
+    background-image: url('images/headshot-lavender.jpg');
+    background-size: contain;
+    background-repeat: no-repeat;
+    padding: 1rem;
+    /* border: thick dotted darkviolet; */
+}
+
+.bio{
+    display: grid;
+    gap: 0.5rem;
+    max-width: 15rem;
+}
+
+/*-------------RESPONSIVE-------------*/
 
     @media (max-width: 500px) {
         body {
