--- a/style.css
+++ b/style.css
@@ -110,8 +110,7 @@ main {
         }
 
             main .card {
-                /* border-left: thin solid var(--bright-text-dim);
-                border-top: thin solid var(--bright-text-dim); */
+                /* box-shadow: 1px 1px 2px var(--dark-text-1); */
                 box-shadow: 1px 1px 2px var(--bright-text-dim);
                 padding: 1rem;
                 display: grid;
@@ -124,8 +123,6 @@ main {
                 background-color: var(--dark-background-1);
             }
 
-            
-
                 .card img {
                     width: 100%;
                     -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
@@ -135,7 +132,6 @@ main {
                 .card .project-heading {
                     display: flex;
                     justify-content: space-between;
-                    padding: 0.5rem;
                 }
 
                     .project-links {
@@ -154,9 +150,6 @@ footer {
 }
 
     footer .contact-me {
-        /* display: flex;
-        flex-direction: column;
-        justify-content: space-around; */
         display: grid;
         gap: 1rem;
         place-items: center;
@@ -176,26 +169,41 @@ footer {
 
 /*-------------ASIDE-------------*/
 
-.headshot-h {
-    background-image: url('images/headshot-lavender.jpg');
-    background-size: contain;
-    background-repeat: no-repeat;
-    padding: 1rem;
-    /* border: thick dotted darkviolet; */
-}
-
-.bio{
+aside {
+    padding: 2rem;
     display: grid;
-    gap: 0.5rem;
-    max-width: 15rem;
+    place-items: center;
 }
 
+    /* .headshot-h {
+        background-image: url('images/headshot-lavender.jpg');
+        background-size: contain;
+        background-repeat: no-repeat;
+        padding: 1rem;
+    } */
+
+    .bio{
+        display: grid;
+        gap: 0.5rem;
+        /* place-items: center; */
+        max-width: 15rem;
+    }
+
+       
+
+
+
+
+
+
+    
 /*-------------RESPONSIVE-------------*/
 
     @media (max-width: 500px) {
         body {
             display: grid;
-            grid-template-columns: 1fr;
+            gap: 0;
+            /* grid-template-columns: 1fr; */
         }
 
         main .card-container {
@@ -203,4 +211,8 @@ footer {
             grid-template-columns: repeat(auto-fit, minmax(80vw, 1fr));
             gap: 2rem;
         }
+
+        aside {
+            display: none;
+        };
     }
